# PyRunOF

./: .gitignore  Description.docx  MANIFEST.in  README.md  README_uv_INSTRUCTION.txt  data.py  main.py  pyproject.toml  setup.py
AdditinalFiles/TurbulenceFiles/: turbulenceProperties_LES  turbulenceProperties_kEpsilon  turbulenceProperties_realizableKE
Examples/: test_decor.py  tests.py
Examples/EOFexample/: run.py
Examples/Example1/: main.py  run.py
Examples/HartmannProblem/: run.py  run2.py  run2LES.py
Examples/Puisel Flow/: TestFunctions.py  run.py
Examples/calculateDevelopedFlow/: run.py
Examples/newVersionCases/: manipulation_test.py  test.py  test.txt
Examples/obstacle/: compute.py
Examples/obstacle_modern/: compute.py  run_salome.py
Examples/obstacle_new_ps/: compute.py
Examples/old_cases/: tests.py
Examples/parallelExample/: data.py  run.py
Examples/parametricSweepExample/: data.py  run.py
Examples/parametricSweepHartmanFlow/: RunparametricSweep.py  data.py
Examples/pitzDailyExample/: run.py
Examples/post_process/: PVscript.txt  ParavIewAutomatization.py  PostProcessClass.py  PostProcessPandasExamples.py  SurfaceIntegral.py  new_example_surf_integrate.py  (+3 more)
Modules/: AddtionalFunctions.py  Elmer.py  InitialValue.py  Manipulations.py  Meshes.py  ParametricSweep.py  RunApplication.py  auxiliary_functions.py  constant.py  elmer.py  information.py  initial_value.py  manipulations.py  meshes.py  parametric_sweep.py  run.py  setConstant.py  setConstantFolder.py  setSystem.py  set_system.py  test.py
NOTICE/: OSHA1stream.H  PROBLEMS_OpenFOAM
pyRunOF/: __init__.py  constant.py  elmer.py  information.py  initial_value.py  manipulations.py  meshes.py  parametric_sweep.py  pyproject.toml  run.py  set_system.py  test.py
pyRunOF/additional_fun/: auxiliary_functions.py  error.py  error_message.py  files.py  foamDictionaries_test.py  information.py  priority.py  strange_fun.py  test.py  waring_message.py  warning.py
pyRunOF/files/bash/: interactive_bash
pyRunOF/modules/: __init__.py  _test_module.py  constant.py  elmer.py  initial_value.py  initial_values.py  manipulations.py  meshes.py  model_config.py  parametric_sweep.py  post_process.py  run.py  set_system.py
pyRunOF/modules new/: constant.py  constant_mod.py  initial_value.py  manipulations.py  parametric_sweep.py  run.py  set_system.py
tests/: main.py  main_test.py  pyproject.toml  test.ipynb  test.py  test_general_fun.py  test_manipulations.py  test_run_command.py
(+1007 files in other folders)
