[project]
name = "pyRunOF"
keywords = ["OF", "openfoam", "simulation", "parametric sweep", "manage package"]
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
dynamic = ["version"]
description = "The library servers to manage settings of openfoam cases."
readme = "README.md"
authors = [
    { name = "Ivan Smolianov", email = "i.a.smolyanov@gmail.com" }
]
requires-python = ">=3.12"

dependencies = ["numpy", "scipy", "tqdm", "pandas", "matplotlib",]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = ["modules new"]


[tool.hatch.version]
path = "__init__.py"

[project.urls]
Homepage = "https://github.com/TreeDa93/PyRunOF/tree/main"
Documentation = "https://github.com/TreeDa93/PyRunOF/tree/main"
Repository = "https://github.com/TreeDa93/PyRunOF/tree/main"
Issues = "https://github.com/TreeDa93/PyRunOF/tree/main"
Changelog = "https://github.com/TreeDa93/PyRunOF/tree/main"